tests/error/cant_infer.gw
#! [contains] can't infer
auto i;
